--- a/lab01.html
+++ b/lab01.html
@@ -1,67 +1,77 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kiefer's Extravagant Hotel</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="static/css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kiefer's Extravagant Hotel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Lab 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lab 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lab 3</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lab 4</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lab 5</a>
-        </li>
-      </ul>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Lab 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Lab 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Lab 3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Lab 4</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Lab 5</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 
 <!-- Content -->
-<div id="hello"></div>
+<div>
+  <p id="hello" class="text-center mt-5"></p>
+</div>
 <!--<div id="cost"></div>-->
-<table id="hotelTable" class="table table-striped">
-  <thead>
-  <tr>
-    <th scope="col">Item</th>
-    <th scope="col">Value</th>
-  </tr>
-  </thead>
-  <tbody>
-  <!-- Rows will be inserted here by JavaScript -->
-  </tbody>
-</table>
+<div id="hotelTableDiv">
+    <table id="hotelTable" class="table">
+        <caption>The Total Cost Including Taxes</caption>
+        <thead>
+        <tr>
+            <th scope="col">Information</th>
+            <th scope="col">Amounts</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Rows will be inserted here by JavaScript -->
+        </tbody>
+    </table>
+</div>
 
 <!-- Footer -->
 <footer class="bg-dark text-center text-white py-3">
-  <div class="container">
-    <p>Copyright &copy; Kiefer&trade;</p>
-  </div>
+    <div class="container">
+        <p>Copyright &copy; Kiefer&trade;</p>
+    </div>
 </footer>
 
 <!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 <script src="static/js/lab01.js"></script>
 </body>
 </html>
