Changed JS Table Function

--- a/lab01.html
+++ b/lab01.html
@@ -40,14 +40,14 @@
     </div>
 </nav>
 
-<!-- Content -->
 <div>
-  <p id="hello" class="text-center mt-5"></p>
+    <p id="hello" class="text-center mt-5"></p>
 </div>
-<!--<div id="cost"></div>-->
+
+<!-- Table -->
 <div id="hotelTableDiv">
-    <table id="hotelTable" class="table">
-        <caption>The Total Cost Including Taxes</caption>
+    <table id="hotelTable" class="table table-dark">
+        <caption>**The Total Cost Including Taxes</caption>
         <thead>
         <tr>
             <th scope="col">Information</th>
