--- a/lab01.html
+++ b/lab01.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Paytone+One&family=Playfair+Display&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -41,7 +44,13 @@
 </nav>
 
 <div>
+    <p id="kiefersHotel" class="text-center mt-5">
+        Welcome to Kiefer's Hotel Getaway!
+    </p>
     <p id="hello" class="text-center mt-5"></p>
+    <p id="kiefersHotelMessage" class="text-center mt-5">
+        How many Rooms do you want to book?
+    </p>
 </div>
 
 <!-- Table -->
