--- a/lab01.html
+++ b/lab01.html
@@ -16,7 +16,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
+        <a class="navbar-brand" href="#">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +56,7 @@
 
 <!-- Table -->
 <div id="hotelTableDiv">
-    <table id="hotelTable" class="table table-dark">
+    <table id="hotelTable" class="table table-dark table-hover">
         <caption>**The Total Cost Including Taxes</caption>
         <thead>
         <tr>
@@ -63,7 +64,7 @@
             <th scope="col">Amounts</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
         <!-- Rows will be inserted here by JavaScript -->
         </tbody>
     </table>
@@ -81,6 +82,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-<script src="static/js/lab01.js"></script>
+<script src="static/js/lab01.js" type="text/javascript"></script>
 </body>
 </html>
