--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
 <!-- TODO: Make the Hotel Menu name change color when active -->
+<!-- TODO: Make the Hotel Menu name change color when active -->
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
