--- a/lab01.html
+++ b/lab01.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Lab 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 2</a>
+                    <a class="nav-link" href="lab02.html">Lab 2</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Lab 3</a>
