--- a/lab02.html
+++ b/lab02.html
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Lab 1</a>
+                    <a class="nav-link" href="lab01.html">Lab 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Lab 2</a>
+                    <a class="nav-link active" aria-current="page" href="#">Lab 2</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Lab 3</a>
@@ -41,8 +41,6 @@
     </div>
 </nav>
 
-<div id="rooms"></div>
-
 <div class="container">
     <div class="row">
         <div class="col-md-6 my-5 px-5">
@@ -52,7 +50,7 @@
                     <h6 class="card-subtitle mb-2 text-body-secondary" id="room-prices">The 3 Prices Are: </h6>
                     <p class="card-text" id="middle-math">Middle: </p>
                     <p class="card-text" id="mean-math">Mean: </p>
-                    <button type="button" class="btn btn-primary" id="math-button">Calculate</button>
+                    <button type="button" class="btn btn-primary" id="math-button">Add Inputs</button>
                 </div>
             </div>
         </div>
