--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 </head>
 <body>
 
-<!-- TODO: Make the Hotel Menu name change color when active -->
-<!-- TODO: Make the Hotel Menu name change color when active -->
-
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
-        <a class="navbar-brand active" href="#">Hotel Menu</a>
+        <a class="navbar-brand active"  aria-current="page" href="index.html">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Lab 1</a>
+                    <a class="nav-link" href="lab01.html">Lab 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 2</a>
+                    <a class="nav-link" href="lab02.html">Lab 2</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Lab 3</a>
@@ -44,7 +41,6 @@
     </div>
 </nav>
 
-
 <!-- Footer -->
 <footer class="bg-dark text-center text-white py-3">
     <div class="container">
@@ -52,6 +48,6 @@
     </div>
 </footer>
 
-<script src="static/js/scriptTemplate.js"></script>
+<script src="static/js/script.js"></script>
 </body>
 </html>
