--- a/lab01.html
+++ b/lab01.html
@@ -9,7 +9,8 @@
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Paytone+One&family=Playfair+Display&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Paytone+One&family=Playfair+Display&family=Rubik:ital,wght@1,300&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
-        <a class="navbar-brand" href="#">Hotel Menu</a>
+        <a class="navbar-brand" href="index.html">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -82,6 +83,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+<script src="static/js/script.js"></script>
 <script src="static/js/lab01.js" type="text/javascript"></script>
 </body>
 </html>
