--- a/lab02.html
+++ b/lab02.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
-        <a class="navbar-brand" href="#">Hotel Menu</a>
+        <a class="navbar-brand" href="index.html">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -131,7 +131,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-<script src="static/js/scriptTemplate.js"></script>
+<script src="static/js/script.js"></script>
 <script src="static/js/lab02.js"></script>
 </body>
 </html>
