--- a/lab01.html
+++ b/lab01.html
@@ -32,13 +32,13 @@
                     <a class="nav-link" href="lab02.html">Lab 2</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 3</a>
+                    <a class="nav-link" href="lab03.html">Lab 3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 4</a>
+                    <a class="nav-link" href="lab04.html">Lab 4</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 5</a>
+                    <a class="nav-link" href="lab05.html">Lab 5</a>
                 </li>
             </ul>
         </div>
