--- a/lab03.html
+++ b/lab03.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
-        <a class="navbar-brand active" aria-current="page" href="index.html">Hotel Menu</a>
+        <a class="navbar-brand" href="index.html">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
                     <a class="nav-link" href="lab02.html">Lab 2</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 3</a>
+                    <a class="nav-link active" aria-current="page" href="lab03.html">Lab 3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 4</a>
+                    <a class="nav-link" href="lab04.html">Lab 4</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lab 5</a>
+                    <a class="nav-link" href="lab05.html">Lab 5</a>
                 </li>
             </ul>
         </div>
@@ -77,6 +77,22 @@
             </div>
         </div>
     </div>
+    <div class="row justify-content-center">
+        <div class="col-md-6 my-5 px-5">
+            <div class="card" id="new-card">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-3">Exercise 2 Part 2</h5>
+                    <form>
+                        <div class="form-group d-flex flex-column align-items-center">
+                            <label for="error-input">Error Handling - Numbers Larger than 2</label>
+                            <input type="number" class="form-control" id="error-input">
+                            <div id="error-output"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Footer -->
@@ -86,21 +102,10 @@
     </div>
 </footer>
 
-<!--<script>-->
-<!--    document.addEventListener('DOMContentLoaded', function () {-->
-<!--        // Select the input field and the div where the count will be displayed-->
-<!--        var nameInput = document.getElementById('name-input');-->
-<!--        var spaceCounter = document.getElementById('space-counter');-->
-
-<!--        // Add an event listener to the input field for the 'input' event-->
-<!--        nameInput.addEventListener('input', function () {-->
-<!--            // Count the spaces in the input value-->
-<!--            var spaceCount = this.value.split(' ').length - 1;-->
-<!--            // Update the div with the space count-->
-<!--            spaceCounter.textContent = `Spaces: ${spaceCount}`;-->
-<!--        });-->
-<!--    });-->
-<!--</script>-->
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 <script src="static/js/script.js"></script>
 <script src="static/js/lab03.js"></script>
 </body>
