Added CSS Effect via Animista and added JS Docstrings

--- a/lab03.html
+++ b/lab03.html
@@ -41,12 +41,12 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container bounce-in-top">
     <div class="row">
         <div class="col-md-6 my-5 px-5">
             <div class="card" id="math-card">
                 <div class="card-body">
-                    <h5 class="card-title text-center mb-3">Part 1 Exercise 1</h5>
+                    <h5 class="card-title text-center mb-3">Space Counting & Letter Counting</h5>
                     <form>
                         <div class="form-group d-flex flex-column align-items-center">
                             <label for="name-input">Find Spaces in a Name</label>
@@ -65,7 +65,7 @@
         <div class="col-md-6 my-5 px-5">
             <div class="card" id="hotel-occupancy-card">
                 <div class="card-body">
-                    <h5 class="card-title text-center mb-3">Part 1 Exercise 2</h5>
+                    <h5 class="card-title text-center mb-3">Using the Date Object</h5>
                     <form>
                         <div class="form-group d-flex flex-column align-items-center">
                             <label for="name-input">Working With TIME!</label>
@@ -81,7 +81,7 @@
         <div class="col-md-6 my-5 px-5">
             <div class="card" id="new-card">
                 <div class="card-body">
-                    <h5 class="card-title text-center mb-3">Exercise 2 Part 2</h5>
+                    <h5 class="card-title text-center mb-3">Error Handling</h5>
                     <form>
                         <div class="form-group d-flex flex-column align-items-center">
                             <label for="error-input">Error Handling - Numbers Larger than 2</label>
