--- a/lab03.html
+++ b/lab03.html
@@ -41,7 +41,7 @@
     </div>
 </nav>
 
-<div class="container bounce-in-top">
+<div class="container">
     <div class="row">
         <div class="col-md-6 my-5 px-5">
             <div class="card" id="math-card">
@@ -54,7 +54,7 @@
                             <div id="space-counter"></div>
                         </div>
                         <div class="form-group d-flex flex-column align-items-center">
-                            <label for="find-letter-input">Find Letter in a Name</label>
+                            <label for="find-letter-input">Find Letter in a Name (Try spacing letters)</label>
                             <input type="text" class="form-control" id="find-letter-input">
                             <div id="find-letter"></div>
                         </div>
