Added CSS and refactored JavaScript to improve hotel booking feature
Specific changes include: added a new CSS class 'title-underline' for title styling, refactored JavaScript to enhance how hotel cards are displayed, and initialized 'Book Now' buttons for each hotel room. These changes enhance the user interface and improve the usability of the site.

--- a/lab04.html
+++ b/lab04.html
@@ -45,6 +45,29 @@
     <div class="column" id="hotel-room-cards">
         <!-- Hotel Room Cards -->
     </div>
+
+    <!-- Initial button to display the table -->
+    <button id="displayTableButton">Display Table</button>
+
+    <!-- Container for the table and the add row button, initially hidden -->
+    <div id="tableContainer" style="display: none;">
+        <!-- Table with column headers -->
+        <table id="hotelTable">
+            <thead>
+            <tr>
+                <th>Column 1</th>
+                <th>Column 2</th>
+                <th>Column 3</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- Rows will be added here -->
+            </tbody>
+        </table>
+        <!-- Button to add a new row, shown with the table -->
+        <button id="addRowButton">Add Row</button>
+    </div>
+
 </div>
 
 
