Update active page in navbar and refactor hotel booking code
The commit includes updates in the HTML file to indicate the active page in the navbar. It also has changes in the JavaScript file, including function refactoring and adding more detailed functionality for hotel room card display and handling button click actions. This contributes to a more user-friendly and efficient hotel booking process.

--- a/lab04.html
+++ b/lab04.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
-        <a class="navbar-brand active" aria-current="page" href="index.html">Hotel Menu</a>
+        <a class="navbar-brand" href="index.html">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="lab03.html">Lab 3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="lab04.html">Lab 4</a>
+                    <a class="nav-link active" aria-current="page" href="lab04.html">Lab 4</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="lab05.html">Lab 5</a>
