--- a/lab04.html
+++ b/lab04.html
@@ -6,6 +6,7 @@
     <title>Kiefer's Extravagant Hotel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
@@ -50,7 +51,8 @@
         <!-- Hotel Room Table -->
     </div>
     <div class="d-flex justify-content-center">
-        <div class="your-class">
+        <div>
+            <!-- The changing content button will be displayed here -->
             <button class="btn btn-primary mb-3" id="hotel-room-table-button">Display Table</button>
         </div>
     </div>
