Add comments, new functions, and events in lab05.html and related files
Revised CSS and JavaScript files to add comments, improve form validation, and include new login/logout button functionality. Updated lab05.html with a plan for a future button addition. Improved user interactivity in lab05.js with fade-out animations and clearInvalidInputs function implementation for better error handling.

--- a/lab05.html
+++ b/lab05.html
@@ -45,6 +45,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="lab05.html">Lab 5</a>
                 </li>
+                <!-- Button will be placed here -->
             </ul>
         </div>
     </div>
