--- a/lab05.html
+++ b/lab05.html
@@ -6,13 +6,13 @@
     <title>Kiefer's Extravagant Hotel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
 
 <!-- Modal -->
-<div class="modal fade" id="register-user-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="register-user-modal" tabindex="-1" aria-labelledby="register-user-modal" aria-hidden="true">
     <!-- Modal Goes Here -->
 </div>
 
