--- a/lab06.html
+++ b/lab06.html
@@ -41,14 +41,19 @@
     </div>
 </nav>
 
+<!-- Main Content -->
 <div class="container">
     <h1 class="text-center mt-5 mb-5">Lab 6</h1>
+    <div class="d-flex justify-content-center align-items-center mb-3" id="resort-button">
+        <button id="btn-resort-get" class="btn btn-primary">Show Resort(s)</button>
+        <!-- TODO: Ability to Create a random Resort, Hotel or Motel -->
+    </div>
     <div class="row">
     </div>
 </div>
 
 <!-- Footer -->
-<footer class="bg-dark text-center text-white py-3">
+<footer class="bg-dark text-center text-white py-3 mt-5">
     <div class="container">
         <p>Copyright &copy; Kiefer&trade;</p>
     </div>
