--- a/lab01.html
+++ b/lab01.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="lab05.html">Lab 5</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lab06.html">Lab 6</a>
+                </li>
             </ul>
         </div>
     </div>
