--- a/lab05.html
+++ b/lab05.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="lab05.html">Lab 5</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="lab06.html">Lab 6</a>
+                </li>
                 <!-- Button will be placed here -->
             </ul>
         </div>
