--- a/lab06.html
+++ b/lab06.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <img id="svgAvatar" src="static/img/batman-av.svg" alt="Menu Icon">
-        <a class="navbar-brand active" aria-current="page" href="index.html">Hotel Menu</a>
+        <a class="navbar-brand" href="index.html">Hotel Menu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,14 +36,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="lab05.html">Lab 5</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="lab06.html" aria-current="page">Lab 6</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
 
 <!-- Main Content -->
-<div class="container">
-    <h1 class="text-center mt-5 mb-5">Lab 6</h1>
+<div class="container mb-5">
+    <h1 id="lab6" class="text-center mt-5 mb-5">Lab 6</h1>
     <div class="d-flex justify-content-center align-items-center mb-3" id="resort-button">
         <button id="btn-resort-get" class="btn btn-primary">Show Resort(s)</button>
         <!-- TODO: Ability to Create a random Resort, Hotel or Motel -->
@@ -51,13 +54,6 @@
     <div class="row">
     </div>
 </div>
-
-<!-- Footer -->
-<footer class="bg-dark text-center text-white py-3 mt-5">
-    <div class="container">
-        <p>Copyright &copy; Kiefer&trade;</p>
-    </div>
-</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
